# noir

./: Cargo.toml  README.md  build.sh
docs/: index.html  index.js  noir.d  noir.js  noir.wasm  noir_bg.wasm  styles.css
docs/js/: README.md  package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
src/: components.rs  constants.rs  gui.rs  lib.rs  main.rs  map.rs  player.rs  story.rs
src/game/: components.rs  map.rs  mod.rs  story.rs
src/states/: end_state.rs  main_state.rs  mod.rs  start_state.rs  state.rs  state_machine.rs
utils/: gl.js  index.html  styles.css
