[package]
name = "noir"
version = "0.1.0"
author = ["Mihir Laud"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
js-sys = "0.3"
legion = { version = "0.4.0", default-features = false, features = ["wasm-bindgen"] }
petgraph = "0.5.1"

[dependencies.web-sys]
version = "0.3.51"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'Node',
  'Event',
  'CustomEvent',
  'Window',
  'console',
  'KeyboardEvent',
]
