[package]
name = "noir"
version = "0.1.0"
authors = ["Mihir Laud <mihirlaud@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = "0.7.0"
console_error_panic_hook = "0.1.6"
specs = "0.16.1"
specs-derive = "0.4.1"